--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -2,22 +2,21 @@
 @import "../../styles/svg.css";
 
 :host {
-  --sgds-modal-padding: var(--sgds-spacer-4);
+  --sgds-modal-panel-padding: var(--sgds-spacer-4);
   --sgds-modal-panel-z-index: 105500;
   --sgds-modal-panel-width: 35rem;
   --sgds-modal-panel-height: auto;
-  --sgds-modal-panel-bg: var(--sgds-white);
+  --sgds-modal-panel-bg: var(--sgds-body-bg);
   --sgds-modal-panel-border-radius: var(--sgds-border-radius);
-  --sgds-modal-header-bottom-border: var(--sgds-border-width) solid var(--sgds-border-color);
+  --sgds-modal-header-border-bottom: var(--sgds-border-width) solid var(--sgds-border-color);
   --sgds-modal-overlay-bg: rgba(0, 0, 0, 0.5);
-  --sgds-modal-padding-top: 1.75rem;
+  --sgds-modal-panel-margin-top: 1.75rem;
   display: contents;
 }
 
 .modal {
   display: flex;
   align-items: start;
-  padding-top: var(--sgds-modal-padding-top);
   justify-content: center;
   position: fixed;
   top: 0;
@@ -28,9 +27,8 @@
   font-family: var(--sgds-body-font-family);
 }
 
-.modal.centered {
-  align-items: center;
-  padding-top: 0;
+.modal.centered .modal-panel {
+  margin: auto;
 }
 
 .modal-panel {
@@ -43,6 +41,7 @@
   max-height: calc(100% - 2.25rem);
   background-color: var(--sgds-modal-panel-bg);
   border-radius: var(--sgds-modal-panel-border-radius);
+  margin-top: var(--sgds-modal-panel-margin-top);
 }
 
 .modal-panel:focus {
@@ -70,9 +69,9 @@
   line-height: 1.33;
   font-size: calc(1.275rem + 0.3vw);
   display: flex;
-  padding: var(--sgds-modal-padding);
+  padding: var(--sgds-modal-panel-padding);
   align-items: center;
-  border-bottom: var(--sgds-modal-header-bottom-border);
+  border-bottom: var(--sgds-modal-header-border-bottom);
 }
 .modal-header.centered {
   border-bottom: 0;
@@ -105,7 +104,7 @@
 
 .modal-body {
   flex: 1 1 auto;
-  padding: var(--sgds-modal-padding);
+  padding: var(--sgds-modal-panel-padding);
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -116,7 +115,7 @@
 .modal-footer {
   flex: 0 0 auto;
   text-align: right;
-  padding: var(--sgds-modal-padding);
+  padding: var(--sgds-modal-panel-padding);
   padding-top: 0;
 }
 
