--- a/src/components/CloseButton/close-button.css
+++ b/src/components/CloseButton/close-button.css
@@ -1,5 +1,5 @@
 :host {
-  --sgds-close-btn-color: var(--sgds-gray-400);
+  --sgds-close-btn-color: var(--sgds-body-color-lighter);
   --sgds-close-btn-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3E%3Cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3E%3C/svg%3E");
   --sgds-close-btn-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
   --sgds-close-btn-size: 1rem;
@@ -49,3 +49,4 @@
   pointer-events: none;
   user-select: none;
 }
+
