test(*): fix test build'

--- a/root.css
+++ b/root.css
@@ -167,6 +167,7 @@
   var(--sgds-success-300);
   --sgds-form-bg: var(--sgds-body-bg);
   --sgds-form-border-width: 1px;
+  --sgds-form-inline-margin-right: var(--sgds-spacer-4);
 
   --sgds-focus-width: 0.13rem;
   --sgds-disabled-color: var(--sgds-gray-400);
