--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -24,12 +24,14 @@ input {
   display: block;
   margin-bottom: var(--sgds-checkbox-margin-bottom);
   min-height: 2rem;
-  padding-left: 1.625em;
+  /* padding-left: 1.625em; */
 }
 
 .form-check .form-check-input {
-  float: left;
-  margin-left: -1.625em;
+  /* float: left;
+  margin-left: -1.625em; */
+  margin-right: var(--sgds-form-input-margin-right);
+
 }
 
 .form-check-input {
