--- a/src/components/Switch/switch.css
+++ b/src/components/Switch/switch.css
@@ -20,10 +20,9 @@ input {
   display: block;
   margin-bottom: var(--sgds-switch-margin-bottom);
   min-height: 2rem;
-  padding-left: 2.5em;
 }
 .form-check .form-check-input {
-  float: left;
+  margin-right: var(--sgds-form-input-margin-right);
 }
 .form-check-input {
   appearance: none;
@@ -66,14 +65,10 @@ input {
   cursor: not-allowed;
 }
 
-/* .form-switch {
-  padding-left: 2.5em;
-} */
 .form-check .form-check-input {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='rgba(0, 0, 0, 0.25)'/%3E%3C/svg%3E");
   background-position: 0;
   border-radius: 2em;
-  margin-left: -2.5em;
   transition: background-position 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
