--- a/src/themes/night.css
+++ b/src/themes/night.css
@@ -1,11 +1,12 @@
-:root {
-  --sgds-primary: #5a42c0;
-  --sgds-secondary: #006472;
-  --sgds-success: #006b00;
-  --sgds-info: #0049dc;
-  --sgds-warning: #864b00;
-  --sgds-danger: #b90000;
-  --sgds-light: #eaeaea;
+:root, :root.sgds-night-theme{
+  color-scheme: only dark;
+  --sgds-primary: #9288f0;
+  --sgds-secondary: #5b9da9;
+  --sgds-success: #53a450;
+  --sgds-info: #5592ff;
+  --sgds-warning: #bc8a57;
+  --sgds-danger: #f06e57;
+  --sgds-light: #939393;
   --sgds-dark: #252525;  
   --sgds-black: #000;
   --sgds-white: #fff;
@@ -74,38 +75,40 @@
   --sgds-gray-800: #252525;
   --sgds-gray-900: #0e0e0e;
 
-  --sgds-primary-filled: var(--sgds-primary);
-  --sgds-secondary-filled: var(--sgds-secondary);
-  --sgds-success-filled: var(--sgds-success);
-  --sgds-info-filled: var(--sgds-info);
-  --sgds-warning-filled: var(--sgds-warning);
-  --sgds-danger-filled: var(--sgds-danger);
+  /* Alerts, Badge, Button */
+  --sgds-primary-filled: var(--sgds-primary-500);
+  --sgds-secondary-filled: var(--sgds-secondary-500);
+  --sgds-success-filled: var(--sgds-success-500);
+  --sgds-info-filled: var(--sgds-info-500);
+  --sgds-warning-filled: var(--sgds-warning-500);
+  --sgds-danger-filled: var(--sgds-danger-500);
   --sgds-light-filled: var(--sgds-light);
   --sgds-dark-filled: var(--sgds-dark);
-  --sgds-primary-text-emphasis: var(--sgds-primary);
-  --sgds-secondary-text-emphasis: var(--sgds-secondary);
-  --sgds-success-text-emphasis: var(--sgds-success);
-  --sgds-info-text-emphasis: var(--sgds-info);
-  --sgds-warning-text-emphasis: var(--sgds-warning);
-  --sgds-danger-text-emphasis: var(--sgds-danger);
+  --sgds-primary-text-emphasis: var(--sgds-primary-200);
+  --sgds-secondary-text-emphasis: var(--sgds-secondary-200);
+  --sgds-success-text-emphasis: var(--sgds-success-200);
+  --sgds-info-text-emphasis: var(--sgds-info-200);
+  --sgds-warning-text-emphasis: var(--sgds-warning-200);
+  --sgds-danger-text-emphasis: var(--sgds-danger-200);
   --sgds-light-text-emphasis: var(--sgds-dark);
   --sgds-dark-text-emphasis: var(--sgds-white);
-  --sgds-primary-bg-subtle: var(--sgds-primary-100);
-  --sgds-secondary-bg-subtle: var(--sgds-secondary-100);
-  --sgds-success-bg-subtle: var(--sgds-success-100);
-  --sgds-info-bg-subtle: var(--sgds-info-100);
-  --sgds-warning-bg-subtle: var(--sgds-warning-100);
-  --sgds-danger-bg-subtle: var(--sgds-danger-100);
-  --sgds-light-bg-subtle: var(--sgds-gray-100);
+  --sgds-primary-bg-subtle: var(--sgds-primary-800);
+  --sgds-secondary-bg-subtle: var(--sgds-secondary-800);
+  --sgds-success-bg-subtle: var(--sgds-success-800);
+  --sgds-info-bg-subtle: var(--sgds-info-800);
+  --sgds-warning-bg-subtle: var(--sgds-warning-800);
+  --sgds-danger-bg-subtle: var(--sgds-danger-800);
+  --sgds-light-bg-subtle: var(--sgds-gray-400);
   --sgds-dark-bg-subtle: var(--sgds-gray-800);
-  --sgds-primary-border-subtle: var(--sgds-primary-400);
-  --sgds-secondary-border-subtle: var(--sgds-secondary-400);
-  --sgds-success-border-subtle: var(--sgds-success-400);
-  --sgds-info-border-subtle: var(--sgds-info-400);
-  --sgds-warning-border-subtle: var(--sgds-warning-400);
-  --sgds-danger-border-subtle: var(--sgds-danger-400);
-  --sgds-light-border-subtle: var(--sgds-gray-400);
-  --sgds-dark-border-subtle: var(--sgds-gray-400);
+  --sgds-primary-border-subtle: var(--sgds-primary-500);
+  --sgds-secondary-border-subtle: var(--sgds-secondary-500);
+  --sgds-success-border-subtle: var(--sgds-success-500);
+  --sgds-info-border-subtle: var(--sgds-info-500);
+  --sgds-warning-border-subtle: var(--sgds-warning-500);
+  --sgds-danger-border-subtle: var(--sgds-danger-500);
+  --sgds-light-border-subtle: var(--sgds-gray-500);
+  --sgds-dark-border-subtle: var(--sgds-gray-500);
+
   --sgds-font-sans-serif: "Inter", system-ui, -apple-system, Roboto, Arial, "Noto Sans", "Liberation Sans",
     sans-serif, "Apple Color Emoji", "Noto Color Emoji";
   --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -116,23 +119,13 @@
   --sgds-line-height-md: 1.5;
   --sgds-line-height-lg: 2;
   --sgds-body-line-height: var(--sgds-line-height-lg);
-  --sgds-body-color: var(--sgds-dark);
-  --sgds-body-color-light: var(--sgds-gray-700);
-  --sgds-body-color-lighter: var(--sgds-gray-600);
-  --sgds-body-bg: var(--sgds-white);
-
-
- 
-  /* --sgds-heading-color: ; */
-  --sgds-link: var(--sgds-info);
-  --sgds-link-decoration: underline;
-  --sgds-link-hover-color: var(--sgds-info-700);
-  /* --sgds-code-color: #d63384;
-  --sgds-highlight-color: #252525;
-  --sgds-highlight-bg: #ffe6c6; */
+  --sgds-body-color: var(--sgds-gray-200);
+  --sgds-body-color-light: var(--sgds-gray-300);
+  --sgds-body-color-lighter: var(--sgds-gray-400);
+  --sgds-body-bg: var(--sgds-gray-900);
   --sgds-border-width: 1px;
   --sgds-border-style: solid;
-  --sgds-border-color: var(--sgds-gray-400);
+  --sgds-border-color: var(--sgds-gray-500);
   --sgds-border-color-translucent: rgba(0, 0, 0, 0.175);
   --sgds-border-radius: 0.25rem;
   --sgds-border-radius-sm: 0.2rem;
@@ -148,6 +141,17 @@
   --sgds-focus-ring-width: 0.25rem;
   --sgds-focus-ring-opacity: 0.25;
   --sgds-focus-ring-color: rgba(90, 66, 192, 0.25);
+  --sgds-focus-width: 0.13rem;
+  --sgds-disabled-color: var(--sgds-gray-400);
+  --sgds-disabled-opacity: 0.5;
+  --sgds-disabled-bg: var(--sgds-gray-800);
+
+  /* Links */
+  --sgds-link: var(--sgds-info);
+  --sgds-link-decoration: underline;
+  --sgds-link-hover-color: var(--sgds-info-700);
+
+  /* Form */
   --sgds-form-valid-color: var(--sgds-success);
   --sgds-form-invalid-color: var(--sgds-danger);
   --sgds-form-valid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23006b00'%3E%3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z'/%3E%3C/svg%3E");
@@ -169,14 +173,10 @@
   --sgds-form-border-width: 1px;
   --sgds-form-inline-margin-right: var(--sgds-spacer-4);
   --sgds-form-input-margin-right: var(--sgds-spacer-2);
-  
-  --sgds-focus-width: 0.13rem;
-  --sgds-disabled-color: var(--sgds-gray-400);
-  --sgds-disabled-opacity: 0.5;
-  --sgds-disabled-bg: var(--sgds-gray-200);
+  /* Input, Button */
   --sgds-input-btn-padding-x: 1rem;
   --sgds-input-btn-padding-y: 0.4375rem;
-
+  /* Spacers */
   --sgds-spacer-0: 0rem;
   --sgds-spacer-1: 0.25rem;
   --sgds-spacer-2: 0.5rem;
@@ -187,89 +187,3 @@
   --sgds-spacer-7: 3rem;
   --sgds-spacer-8: 3.5rem;
 }
-/* [data-bs-theme="dark"] {
-  --sgds-body-color: #d2d2d2;
-  --sgds-body-color-rgb: 210, 210, 210;
-  --sgds-body-bg: #0e0e0e;
-  --sgds-body-bg-rgb: 14, 14, 14;
-  --sgds-emphasis-color: #fff;
-  --sgds-emphasis-color-rgb: 255, 255, 255;
-  --sgds-secondary-color: hsla(0, 0%, 82%, 0.75);
-  --sgds-secondary-color-rgb: 210, 210, 210;
-  --sgds-secondary-bg: #252525;
-  --sgds-secondary-bg-rgb: 37, 37, 37;
-  --sgds-tertiary-color: hsla(0, 0%, 82%, 0.5);
-  --sgds-tertiary-color-rgb: 210, 210, 210;
-  --sgds-tertiary-bg: #1a1a1a;
-  --sgds-tertiary-bg-rgb: 26, 26, 26;
-  --sgds-primary-text-emphasis: #d1ceff;
-  --sgds-secondary-text-emphasis: #abd9e2;
-  --sgds-success-text-emphasis: #a5dfa1;
-  --sgds-info-text-emphasis: #a7d6ff;
-  --sgds-warning-text-emphasis: #f3cda8;
-  --sgds-danger-text-emphasis: #ffbdaa;
-  --sgds-light-text-emphasis: #252525;
-  --sgds-dark-text-emphasis: #fff;
-  --sgds-primary-bg-subtle: #2d007e;
-  --sgds-secondary-bg-subtle: #002c3a;
-  --sgds-success-bg-subtle: #003100;
-  --sgds-info-bg-subtle: #000097;
-  --sgds-warning-bg-subtle: #491200;
-  --sgds-danger-bg-subtle: #720000;
-  --sgds-light-bg-subtle: #939393;
-  --sgds-dark-bg-subtle: #252525;
-  --sgds-primary-border-subtle: #7562e2;
-  --sgds-secondary-border-subtle: #228190;
-  --sgds-success-border-subtle: #088912;
-  --sgds-info-border-subtle: #216bff;
-  --sgds-warning-border-subtle: #a5681f;
-  --sgds-danger-border-subtle: #dd361c;
-  --sgds-light-border-subtle: #757575;
-  --sgds-dark-border-subtle: #757575;
-  --sgds-heading-color: inherit;
-  --sgds-link: #5592ff;
-  --sgds-link-hover-color: #7fb5ff;
-  --sgds-link-rgb: 85, 146, 255;
-  --sgds-link-hover-color-rgb: 127, 181, 255;
-  --sgds-code-color: #e685b5;
-  --sgds-highlight-color: #d2d2d2;
-  --sgds-highlight-bg: #491200;
-  --sgds-border-color: #757575;
-  --sgds-border-color-translucent: hsla(0, 0%, 100%, 0.15);
-  --sgds-form-valid-color: #7ec17a;
-  --sgds-form-valid-border-color: #7ec17a;
-  --sgds-form-invalid-color: #ff9782;
-  --sgds-form-invalid-border-color: #ff9782;
-} */
-
-/* [data-bs-theme="dark"] {
-  --sgds-primary: #9288f0;
-  --sgds-secondary: #5b9da9;
-  --sgds-success: #53a450;
-  --sgds-info: #5592ff;
-  --sgds-warning: #bc8a57;
-  --sgds-danger: #f06e57;
-  --sgds-light: #939393;
-  --sgds-dark: #252525;
-  --sgds-primary-filled: #7562e2;
-  --sgds-secondary-filled: #228190;
-  --sgds-success-filled: #088912;
-  --sgds-info-filled: #216bff;
-  --sgds-warning-filled: #a5681f;
-  --sgds-danger-filled: #dd361c;
-  --sgds-light-filled: #939393;
-  --sgds-dark-filled: #252525;
-  color-scheme: dark;
-} */
-/* body {
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: var(--sgds-body-bg);
-  color: var(--sgds-body-color);
-  font-family: var(--sgds-body-font-family);
-  font-size: var(--sgds-body-font-size);
-  font-weight: var(--sgds-body-font-weight);
-  line-height: var(--sgds-body-line-height);
-  margin: 0;
-  text-align: var(--sgds-body-text-align);
-} */
