--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -1,12 +1,13 @@
 :host {
-  --pagination-color: var(--sgds-info, #0f71bb);
-  --pagination-bg-color: var(--sgds-white, #fff);
-  --pagination-hover-bg-color: var(--sgds-gray-200, #e4e7ec);
-  --pagination-hover-border-color: var(--sgds-gray-300, #d0d5dd);
-  --pagination-active-color: var(--sgds-white, #fff);
-  --pagination-active-bg-color: var(--sgds-info, #0f71bb);
-  --pagination-disabled-color: var(--sgds-gray-600, #344054);
-  --pagination-disabled-bg-color: var(--sgds-white, #fff);
+  --sgds-pagination-color: var(--sgds-link);
+  --sgds-pagination-bg: var(--sgds-body-bg);
+  --sgds-pagination-hover-bg: var(--sgds-gray-200);
+  --sgds-pagination-hover-border-color: var(--sgds-gray-300);
+  --sgds-pagination-active-color: var(--sgds-white);
+  --sgds-pagination-active-bg: var(--sgds-link);
+  --sgds-pagination-disabled-color: var(--sgds-gray);
+  --sgds-pagination-disabled-bg: var(--sgds-body-bg);
+  --sgds-pagination-focus-box-shadow: 0 0 0 0.125rem rgba(15, 113, 187, 0.25);
 }
 
 ul {
@@ -23,9 +24,9 @@ svg {
   padding-left: 0;
 }
 .page-link {
-  background-color: #fff;
-  border: 1px solid #98a2b3;
-  color: #0f71bb;
+  background-color: var(--sgds-pagination-bg);
+  border: 1px solid var(--sgds-border-color);
+  color: var(--sgds-pagination-color);
   display: block;
   position: relative;
   padding: 0.5rem 1rem;
@@ -39,32 +40,37 @@ svg {
   }
 }
 .page-link:hover {
-  border-color: #d0d5dd;
+  color: var(--sgds-pagination-color);
+  background-color: var(--sgds-pagination-hover-bg);
+  border-color: var(--sgds-pagination-hover-border-color);
   z-index: 2;
 }
-.page-link:focus,
-.page-link:hover {
-  background-color: #e4e7ec;
-  color: #0c5a96;
-}
 .page-link:focus {
-  box-shadow: 0 0 0 0.125rem rgba(15, 113, 187, 0.25);
+  color: var(--sgds-pagination-color);
+  background-color: var(--sgds-pagination-hover-bg);
+  box-shadow: var(--sgds-pagination-focus-box-shadow);
   outline: 0;
   z-index: 3;
+}
+.page-item {
+  cursor: pointer;
+}
+.page-item.disabled {
+  cursor: not-allowed;
 }
 .page-item:not(:first-child) .page-link {
   margin-left: -1px;
 }
 .page-item.active .page-link {
-  background-color: #0f71bb;
-  border-color: #0f71bb;
-  color: #fff;
   z-index: 3;
+  color: var(--sgds-pagination-active-color);
+  border-color: #0f71bb;
+  background-color: var(--sgds-pagination-active-bg);
 }
 .page-item.disabled .page-link {
-  background-color: #fff;
+  background-color: var(--sgds-pagination-disabled-bg);
   border-color: #98a2b3;
-  color: #344054;
+  color: var(--sgds-pagination-disabled-color);
   pointer-events: none;
 }
 .page-item:first-child .page-link {
@@ -97,36 +103,4 @@ svg {
   position: absolute !important;
   white-space: nowrap !important;
   width: 1px !important;
-}
-/**scss */
-
-ul.pagination.sgds {
-  li {
-    cursor: pointer;
-    &.disabled {
-      cursor: default;
-    }
-    &.page-item {
-      span {
-        &.page-link {
-          color: var(--pagination-color);
-          background-color: var(--pagination-bg-color);
-
-          &:hover {
-            color: var(--pagination-color);
-            background-color: var(--pagination-hover-bg-color);
-            border-color: var(--pagination-hover-border-color);
-          }
-        }
-      }
-      &.disabled .page-link {
-        color: var(--pagination-disabled-color);
-        background-color: var(--pagination-disabled-bg-color);
-      }
-      &.active .page-link {
-        color: var(--pagination-active-color);
-        background-color: var(--pagination-active-bg-color);
-      }
-    }
-  }
 }
