--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -5,10 +5,19 @@
   grid-template-columns: repeat(3, 1fr);
   align-items: stretch;
 }
-sgds-card.intro::part(base) {
+sgds-card.intro::part(base), sgds-card.faq::part(base) {
   border: none;
   background-color: #f6f7fb;
   border-radius: 24px;
   height: 100%;
 }
 
+/* FAQ stylings */
+
+sgds-faq-grid{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  row-gap: 1rem;
+  column-gap: 2rem;
+  width: 100%;
+}
