fix(mainnav): fix dropdown menu border and box shadow rgba value

--- a/src/components/Mainnav/mainnav-dropdown.css
+++ b/src/components/Mainnav/mainnav-dropdown.css
@@ -5,10 +5,10 @@
 
   .dropdown-menu {
     margin-top: 0;
-    border: 1px solid rgba(#000, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0 0 5px 5px;
     background-color: #fff;
-    box-shadow: 0 0.5rem 1rem rgba(#000, 0.15);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   }
   .nav-link.show {
     border-color: var(--sgds-mainnav-theme-color);
